# processamento-de-imagens

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: app.hpp  image_processing.hpp  ui.hpp
src/: app.cpp  image_processing.cpp  main.cpp  ui.cpp
